# rust_1pass

./: .gitignore  Cargo.toml  LICENSE  README.md
src/lib/: config.rs  lib.rs
src/lib/openv/: downloader.rs  home_dir.rs  installer.rs  local_versions.rs  mod.rs  op_release.rs  settings.rs  types.rs  unpacker.rs
src/lib/session/: launcher.rs  mod.rs  signin.rs  types.rs
testdata/: .gitignore
testdata/release_notes/: 2021_11_14_release_notes.html
testdata/tmp/: README.md
