[package]
name = "rust_1pass"
version = "0.0.1"
edition = "2021"
authors = ["Wei Ning <macgnw@gmail.com>"]

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "^0.11", features = [] }
clap = "3.0.0-beta.5"
regex = "^1.5"
lazy_static = "1"
semver = "1"
anyhow = "1"
thiserror = "1"
zip = "^0.5"
rpassword = "5"
dirs = "4.0.0"

[[bin]]
name = "openv"
path = "src/bin/openv.rs"

[lib]
name = "lib_rust_1pass"
path = "src/lib/lib.rs"
test = true
doctest = false
bench = false
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["rlib"]
required-features = []
